August 2nd
Python 3.12.4 (tags/v3.12.4:8e8a4ba, Jun  6 2024, 19:30:16) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> i=5
>>> while True:
...    print(i)
...    i=i-1
...    if i<=2:
...       break
...
5
4
3
>>> i=o
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'o' is not defined
>>> i=0
>>> while True:
...    i=i+1
...    if i==2:
...       print('Skipping 2')
...       continue
...    if i==5:
...       print('Breaking')
...       break
...    print(i)
...
... print('Finished')
  File "<stdin>", line 11
    print('Finished')
    ^^^^^
SyntaxError: invalid syntax
>>> i=0
>>> while True:
...    i=i+1
...    if i==2:
...       print('Skipping 2')
...       continue
...    if i==5:
...       print('Breaking')
...       break
...    print(i)
...
1
Skipping 2
3
4
Breaking
>>> words=['hello','world','!']
>>> print(words[0])
hello
>>> nums=[5,4,3,2,1]
>>> print(nums[1])
4
>>> empty_list=[]
>>> print(empty_list)
[]
>>> number=3
>>> things=['string',0,[1,2,number],4.56]
>>> print(things[1])
0
>>> print(things[2])
[1, 2, 3]
>>> print(things[2][2])
3
>>> list=[42,55,67]
>>> print(list[2])
67
>>> str='hello world'
>>> print(str[6])
w
>>> print(str[1])
e
>>> print(str[5])

>>> num=[5,4,3,[2],1]
>>> print(num[0])
5
>>> print(num[3][0])
2
>>> print(num[3][12])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> print(num[5])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> print(num[0])
5
>>> nums=[7,7,7,7,7]
>>> print(nums)
[7, 7, 7, 7, 7]
>>> nums[2]=5
>>> print(nums)
[7, 7, 5, 7, 7]
>>> nums=[1,2,3]
>>> nums.append(4)
>>> print(nums)
[1, 2, 3, 4]
>>> words=['hello']
>>> words.append('world!')
>>> print(words[1])
world!
>>> nums=[1,3,5,2,4,]
>>> print(len(nums))
5
>>> letters=['a','b','c']
>>> letters.append('d')
>>> print(len(letters))
4
>>> words=['Python','fun']
>>> index=1
>>> words.insert(index,'is')
>>> print(words)
['Python', 'is', 'fun']
>>> nums=[9,8,7,6,5]
>>> nums.append(4)
>>> nums.insert(2,11)
>>> print(len(nums))
7
>>> print(nums)
[9, 8, 11, 7, 6, 5, 4]
>>> letters=['p','q','r','s','p','u']
>>> print(letters.index('r'))
2
>>> print(max(letters))
u
>>> print(min(letters))
p
>>> print(letters.conut('p'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'conut'. Did you mean: 'count'?
>>> print(letters.count('p'))
2
>>> print(letters.remove('p'))
None
>>> print(letters.)
  File "<stdin>", line 1
    print(letters.)
                  ^
SyntaxError: invalid syntax
>>> print(letters)
['q', 'r', 's', 'p', 'u']
>>> letters.remove('p')
>>> print(letters)
['q', 'r', 's', 'u']
>>> letters.reserve
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'reserve'. Did you mean: 'reverse'?
>>> letters.reserve()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'reserve'. Did you mean: 'reverse'?
>>> letters.reserve(1,2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'reserve'. Did you mean: 'reverse'?
>>> letters.reserve(1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'reserve'. Did you mean: 'reverse'?
>>> letters.reverse()
>>> print(letters)
['u', 's', 'r', 'q']
>>> str['a','b','c']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: string indices must be integers, not 'tuple'
>>> str=['a','b','c']
>>> str.index('c')
2
>>> def add_numbers(x,y)
  File "<stdin>", line 1
    def add_numbers(x,y)
                        ^
SyntaxError: expected ':'
>>> def add_numbers(x,y):
...   total=x+y
...   return total
... print(add_numbers(4,5))
  File "<stdin>", line 4
    print(add_numbers(4,5))
    ^^^^^
SyntaxError: invalid syntax
>>> def add_numbers(x,y):
...   total=x+y
...   return total
...   print(add_numbers(4,5))
...
>>>
>>> print(add_numbers(4,5))
9
>>> for i in range(10):
...   if not i%2==0:
...      print(i+1)
...
2
4
6
8
10
>>> while False:
...    print('looping')
...
>>>
>>> list=[1,2,3,4]
>>> if len(list)%2==0:
...    print(list[0])
...
1
>>> letters=['x','y','z']
>>> letters.insert(1,w)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'w' is not defined
>>> letters.insert(1,'w')
>>> print(lettters[2])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'lettters' is not defined. Did you mean: 'letters'?
>>> print(letters[2])
y
>>> list=[1,2,3]
>>> for var in list:
...    print(var)
...
1
2
3
>>> def my_function():
...    print('spam')
...    print('spam')
...    print('spam')
...
>>> my_functio
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'my_functio' is not defined. Did you mean: 'my_function'?
>>> my_function
<function my_function at 0x0000022B9F8A1440>
>>> my_function()
spam
spam
spam
>>> range(0,100,5)
range(0, 100, 5)
>>>
>>> def hello():
...   print('Hi!')
...
>>> hello()
Hi!
>>> def print_w(word):
...    print(word+'!')
...
>>> print_w('spam')
spam!
>>> print_w('eggs')
eggs!
>>> def p_double(x):
...    print()2*x
  File "<stdin>", line 2
    print()2*x
           ^
SyntaxError: invalid syntax
>>> def p_double(x):
...    print(2*x)
...
>>> p_double()3
  File "<stdin>", line 1
    p_double()3
              ^
SyntaxError: invalid syntax
>>> p_double(3)
6
>>> p_double(100)
200
>>> def print_sum_twice(x,y):
...    print(x+y)
...    print(x+y)
...
>>> print_sum_twice(5,8)
13
13
>>> print_sum_twice(8,8)
16
16
>>> def print_mult(x,y):
...    print(x*y)
...
>>> print(27,84)
27 84
>>> print_mult(27,84)
2268
>>> # This is a note
>>> x=365
>>> y=7
>>> print(x%y)# find the remainder
1
>>> x=8
>>> #printing x
>>> print(x)
8
>>> def shout(word):
...   """
...   打印字符并在后面加上感叹号
...   """
...   print(word+'!')
...
>>> shout('spam')
spam!
>>> def multiply(x,y):
...   return x*y
...
>>> a=4
>>> b=7
>>> ope=multiply
>>> print(ope(a,b))
28
>>> def shout(word):
...    return word+!''
  File "<stdin>", line 2
    return word+!''
                ^
SyntaxError: invalid syntax
>>> def shout(word):
...    return word+'!'
...
>>> speak=shout
>>> output=speak('shout')
>>> print(output)
shout!
>>> def add(x+y):
  File "<stdin>", line 1
    def add(x+y):
             ^
SyntaxError: invalid syntax
>>> def add(x,y):
...    return x+y
...
>>> def do_twice(func,x,y):
...    return func(func(x,y),func(x,y))
...
>>> a=5
>>> b=10
>>> print(do_twice(add,a,b))
30
>>> def square(x):
...   returnx*x
...
>>> def text(func,x):
...   print(func(x))
...
>>> text(square,x)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 2, in text
  File "<stdin>", line 2, in square
NameError: name 'returnx' is not defined
>>> text(square,42)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "<stdin>", line 2, in text
  File "<stdin>", line 2, in square
NameError: name 'returnx' is not defined
>>> def square(x):
...   return x*x
...
>>> def text(func,x):
...   print(func(x))
...
>>> text(square,42)
1764
>>> import random
>>> for i in range(5):
...    value=random.randint(1,6)
...    print(value)
...
1
6
6
4
2
>>>
